<resources>
    <string name="app_name">Coupin</string>
    <string name="app_link">https://play.google.com/store/apps/details?id=com.kibou.abisoyeoke_lawal.coupinapp</string>
    <string name="facebook_app_id">533567463993659</string>
    <string name="fb_login_protocol_scheme">fb134058260630791</string>
    <string name="google_client_id">317929403701-vbciqi4cackgjvk0cr6dr0vi61332cbb.apps.googleusercontent.com</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_pass">Password</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Create Account</string>
    <string name="sign_in">Log In To Coupin</string>
    <string name="sign_in_w_facebook">Sign In with Facebook</string>
    <string name="forgot">Forgot Password?</string>
    <string name="title_activity_sign_up">Create an Account</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="error_confirm_password">Password is not the same, please reenter password</string>
    <string name="error_full_name_required">Full name is required</string>
    <string name="error_invalid_network">Invalid Network Provider</string>
    <string name="error_empty">Error, Cannot be empty.</string>
    <string name="error_connection_title">Connection Error</string>
    <string name="error_connection_detail">We encountered an error while trying to connect.</string>
    <string name="success_password">Password updated successfully.</string>
    <string-array name="networks">
        <item>Select Mobile Network</item>
        <item>AirTel</item>
        <item>Etisalat</item>
        <item>Glo</item>
        <item>MTN</item>
        <item>N-Tel</item>
    </string-array>
    <string-array name="faqs_title">
        <item>I could not log in with Facebook or Google, why the error messages?</item>
        <item>How can I find promotions/rewards from a specific preferred retailer?</item>
        <item>Why did the app just suddenly close?</item>
        <item>How do I set push notification preferences?</item>
        <item>The app keeps closing when trying to fill the enhanced experience form, why is that?</item>
        <item>How do I browse all the promotion/rewards available in my city?</item>
        <item>How do I update my reward/promotion category preferences</item>
    </string-array>
    <string-array name="faqs_details">
        <item>This may be from the privacy settings you have on your Facebook/google profile, which grants access to specific app types.</item>
        <item>This can be done by searching for the specific retailer\'s name using the search icon on the app\'s home page.</item>
        <item>The app was unable to determine your location or there is a break in data communication. Please check your device location is switched on and your data network is available.</item>
        <item>This can be found in the profile section of the app under the Notifications tab.</item>
        <item>Please check you have a stable internet connection. This generally occurs when there is break in communication from your network data provider.</item>
        <item>Using the filter icon on the home section of the app, increase the radius to the maximum radius (10km). This should cover your entire city.</item>
        <item>This can be done in the profile section of the app, under the Change Category tab.</item>
    </string-array>
    <string name="main_package">com.kibou.abisoyeoke_lawal.coupinapp</string>
    <string name="ep_login_user">/auth/signin/c</string>
    <string name="socialAut">/auth/signin/c/social</string>
    <string name="ep_register_user">/auth/register/c</string>
    <string name="ep_api_merchant">/merchant</string>
    <string name="ep_api_get_prime">/merchant/prime</string>
    <string name="ep_api_merchant_new">/merchant/new</string>
    <string name="ep_api_merchant_recent">/merchant/recent</string>
    <string name="ep_api_reward">/rewards/merchant</string>
    <string name="ep_api_user">/customer</string>
    <string name="ep_api_user_category">/customer/category</string>
    <string name="ep_api_user_favourite">/customer/favourites</string>
    <string name="ep_api_user_feedback">/customer/feedback</string>
    <string name="ep_api_user_notifications">/customer/notifications/%s</string>
    <string name="ep_generate_code">/coupin</string>
    <string name="ep_get_rewards">/coupin</string>
    <string name="ep_rewards_use_saved">/coupin/id/activate</string>
    <string name="btn_save_later">Safe for Later</string>
    <string name="btn_use_now">Use Now</string>
    <string name="get_coupin">Get Coupin</string>
    <string name="code">Code:</string>
    <string name="coupin">Coupin</string>
    <string name="coupins">Coupins</string>
    <string name="pin_reward">Pin Reward(s)</string>
    <string name="save_select">Save Selection</string>
    <string name="logo_text">LOGO</string>
    <string name="or">OR</string>
    <string name="already_user">Already a user?</string>
    <string name="sign_up_w_facebook">Sign Up with Facebook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="security">Security</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_maps">Map</string>
    <string name="example_text_1">Discount 1</string>
    <string name="example_text_2">Text Example 2</string>
    <string name="testing">Testing</string>
    <string name="coupons">Coupons</string>
    <string name="search">Search</string>
    <string name="favourite">Favourites</string>
    <string name="profile">Profile</string>
    <string name="unauthorized">Invalid email or password. Please try again</string>
    <string name="notFound">User does not exist.</string>
    <string name="duplicate">Duplicate Error. User already exists.</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_navigate">Go Now</string>
    <string name="example_text_code">g24iou2</string>
    <string name="verify">Verify</string>
    <string name="empty_merchants">There are currently no places matching your search</string>
    <string name="searching">Searching for</string>
    <string name="white_logo">White Logo</string>
    <string name="example_address_1">D4 Snoop Street, Off Rap Lane, Akoka, Lekki Phase 1, Lagos.</string>
    <string name="sample_details">when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</string>
    <string name="descr_steps">Button to Go to Place</string>
    <string name="descr_favourite">Favourite Button</string>
    <string name="descr_back">Back Button</string>
    <string name="example_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet augue et tellus iaculis volutpat. Nulla imperdiet, sapien id bibendum maximus, odio leo fermentum lorem, sollicitudin varius lorem diam eu arcu. Nulla eleifend odio egestas, ullamcorper lacus vel, eleifend ex. In euismod sem quis consequat fringilla.</string>
    <string name="na">N/A</string>
    <string name="date_placeholder">D M Y</string>
    <string name="remove_reward">Remove Reward</string>
    <string name="discard_header">DISCARD REWARDS</string>
    <string name="discard_body">All the rewards you selected will be lost. Are you sure you want to proceed?</string>
    <string name="keep">KEEP SELECTION</string>
    <string name="discard">YES, DISCARD</string>
    <string name="welcome_header">Welcome To Coupin</string>
    <string name="welcome_header_signup">Sign Up Using Your Email</string>
    <string name="cont">Continue</string>
    <string name="already_login">Already a member? Login</string>
    <string name="social_connect">Social Connect: Sign in with</string>
    <string name="welcome_back_header">Hi, Welcome Back</string>
    <string name="welcome_back_header_signin">Login Using Your Email</string>
    <string name="new_signin">Not a member? Sign Up</string>
    <string name="around">around you</string>
    <string name="edit_profile">Edit My Profile</string>
    <string name="edit_category">Change Category</string>
    <string name="support">SUPPORT</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback/Redeem Reward</string>
    <string name="about">About Coupin</string>
    <string name="terms">Terms of Service</string>
    <string name="version_header">App Version</string>
    <string name="logout">Logout of Coupin</string>
    <string name="label_firstname">First Name</string>
    <string name="label_lastname">Last Name</string>
    <string name="label_email">Email Address</string>
    <string name="label_mobile">Mobile Number</string>
    <string name="label_gender">Gender</string>
    <string name="change_pass">Change Password</string>
    <string name="label_help_merchant">Enter Merchant Name (Optional)</string>
    <string name="label_help_coupin">Enter Coupin Code (Optional)</string>
    <string name="label_help_message">Leave a message</string>
    <string name="submit">Submit</string>
    <string name="label_assist">How may we assist you?</string>
    <string name="example_reward">12 Rewards Available</string>
    <string name="reward">Redeem Rewards</string>
    <string name="problem_question">Having problems redeeming rewards at merchant ?</string>
    <string name="call_support">Call Customer Support:</string>
    <string name="call_no">+2349125225923</string>
    <string name="call_no_alt">+2348179435613</string>
    <string name="call_no_tel">tel:+2349125225923</string>
    <string name="call_no_tel_alt">tel:+2348179435613</string>
    <string name="feedback_s">Feedback/Suggestions</string>
    <string name="empty_fav">You have no favourites.</string>
    <string name="empty_later">No coupins currently saved.</string>
    <string name="empty_now">No coupins currently active</string>
    <string name="error_now">Please check your connection and try again</string>
    <string name="receive_notifications">Would you like to receive notifications?</string>
    <string name="receive_weekly">Receive on weekdays or weekends</string>
    <string name="receive_weekdays">Receive notifications every weekday.</string>
    <string name="receive_weekdays_small">(Receive notifications every Monday)</string>
    <string name="receive_weekends">Receive notifications every weekend.</string>
    <string name="delivery">Delivery</string>
    <string name="delivery_bonus">Delivery bonus</string>
    <string name="delivery_bonus_text">Congratulations, you get N200 discount for your next delivery</string>
    <string name="address_book">Address Book</string>
    <string name="delete_address_dialog_header">Delete Address</string>
    <string name="delete_address_dialog_body">Are you sure you want to delete this address?</string>
    <string name="delete">delete</string>
    <string name="cancel">Cancel</string>
    <string name="dash">--</string>
</resources>