<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_default"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="com.kibou.abisoyeoke_lawal.coupinapp.fragments.ProfileFragment">

    <RelativeLayout
        android:id="@+id/top_section_layout"
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        
        <ImageView
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_height="@dimen/icon_sm"
            android:layout_margin="@dimen/margin_sm"
            android:layout_width="@dimen/icon_sm"
            android:src="@drawable/ic_search_lg"
            android:visibility="gone"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_picture"
            android:layout_centerInParent="true"
            android:layout_height="@dimen/interest_icon"
            android:layout_marginBottom="@dimen/margin_sm"
            android:layout_width="@dimen/interest_icon"
            android:src="@drawable/ic_coupin_male"/>
        
        <TextView
            android:id="@+id/profile_name"
            android:layout_below="@id/profile_picture"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dash"
            android:textColor="@color/text_color_1"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_sm"
            android:paddingEnd="@dimen/padding_sm"
            android:paddingBottom="@dimen/padding_sm"
            >

            <TextView
                android:id="@+id/profile_edit"
                style="@style/profile_item_style"
                android:text="@string/edit_profile" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <TextView
                android:id="@+id/profile_category"
                style="@style/profile_item_style"
                android:text="@string/edit_category" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <TextView
                android:id="@+id/profile_notifications"
                style="@style/profile_item_style"
                android:text="@string/title_notifications" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <TextView
                android:id="@+id/profile_address_book"
                style="@style/profile_item_style"
                android:text="@string/address_book" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/theme_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Dark Theme"
                    android:textSize="@dimen/large_text"
                    android:textColor="@color/text_color_1"
                    android:paddingTop="@dimen/padding_sm"
                    android:paddingBottom="@dimen/padding_sm"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/theme_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/theme_text"
                    app:layout_constraintBottom_toBottomOf="@id/theme_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_xlg"
                android:layout_marginBottom="@dimen/margin_xs"
                android:gravity="center_vertical"
                android:text="@string/support"
                android:textColor="@color/text_color_1"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/profile_faq"
                style="@style/profile_item_style"
                android:text="@string/faq" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <TextView
                android:id="@+id/profile_feedback"
                style="@style/profile_item_style"
                android:text="@string/feedback" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <TextView
                android:id="@+id/profile_about"
                style="@style/profile_item_style"
                android:text="@string/about" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <TextView
                android:id="@+id/profile_terms"
                style="@style/profile_item_style"
                android:text="@string/terms" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/background_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_header"
                android:textColor="@color/text_color_1"
                android:paddingTop="@dimen/padding_sm"
                android:textSize="@dimen/large_text"/>
            <TextView
                android:id="@+id/profile_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/padding_sm"
                android:text="@string/feedback"
                android:textColor="@color/text_color_4"
                android:textSize="@dimen/medium_text" />

            <Button
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:background="@color/background_5"
                android:text="@string/logout"
                android:textColor="@color/text_color_5"
                android:textSize="@dimen/large_text"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
