<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="150dp"
    android:paddingTop="40dp">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/code_loadingview"
        android:layout_centerInParent="true"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:indicatorName="BallScaleMultipleIndicator"
        app:indicatorColor="@color/colorAccent"/>

    <RelativeLayout
        android:id="@+id/code_main"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/generated_code_textview"
            android:gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_text_code"
            android:textSize="@dimen/logo_text"
            android:textStyle="bold"/>

        <Button
            android:background="@color/success_stroke_color"
            android:id="@+id/btn_dialog_ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/btn_ok"
            android:textColor="@color/white"/>

        <Button
            android:background="@color/colorAccent"
            android:drawableEnd="@android:drawable/ic_menu_send"
            android:drawableRight="@android:drawable/ic_menu_send"
            android:id="@+id/btn_dialog_go"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btn_dialog_ok"
            android:layout_width="200dp"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:text="@string/btn_navigate"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>