<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    tools:context="com.kibou.abisoyeoke_lawal.coupinapp.InterestsActivity">

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

        <TextView
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/padding_sm"
            android:text="@string/welcome_header"
            android:textColor="@color/white"
            android:textSize="@dimen/xxlarge_text"
            android:textStyle="bold"/>

        <TextView
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/padding_sm"
            android:text="@string/welcome_header_signup"
            android:textColor="@color/offAccent"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold"/>

        <GridView
            android:gravity="center"
            android:horizontalSpacing="@dimen/margin_sm"
            android:id="@+id/interests_grid"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:numColumns="2"
            android:stretchMode="columnWidth"
            android:verticalSpacing="@dimen/margin_sm"/>

    </LinearLayout>

    <TextView
        android:background="@color/black"
        android:gravity="center"
        android:id="@+id/interest_continue"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/padding_md"
        android:text="@string/cont"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold"
        android:visibility="gone"/>

</RelativeLayout>
